<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="Inputs_A65FACA4" Id="{546a5e5e-395a-02c8-3a2d-07ae0583dd34}">
    <Declaration><![CDATA[{attribute 'GeneratedUsingTerminal: IODEVICETYPE_ETHERCATPROT'}
{attribute addProperty BoxType "IODEVICETYPE_ETHERCATPROT"}
{attribute addProperty Id "SlaveCountAT %I*UINT2DevStateAT %I*UINT2Frm0StateAT %I*UINT2Frm0WcStateAT %I*UINT2Frm0InputToggleAT %I*UINT2"}
{attribute addProperty CRC "2791287972"}
{attribute addProperty Size "10"}
TYPE Inputs_A65FACA4 : 
STRUCT
    {attribute addProperty Name "SlaveCount"}
    SlaveCount AT %I* : UINT;
    {attribute addProperty Name "DevState"}
    DevState AT %I* : UINT;
    {attribute addProperty Name "Frm0State"}
    Frm0State AT %I* : UINT;
    {attribute addProperty Name "Frm0WcState"}
    Frm0WcState AT %I* : UINT;
    {attribute addProperty Name "Frm0InputToggle"}
    Frm0InputToggle AT %I* : UINT;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>