<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="Outputs_23C0ED1D" Id="{5ac677d7-1a67-0fc7-35e4-bb4799733620}">
    <Declaration><![CDATA[{attribute 'GeneratedUsingTerminal: IODEVICETYPE_ETHERCATPROT'}
{attribute addProperty BoxType "IODEVICETYPE_ETHERCATPROT"}
{attribute addProperty Id "DevCtrlAT %Q*UINT2Frm0CtrlAT %Q*UINT2Frm0WcCtrlAT %Q*UINT2"}
{attribute addProperty CRC "599846173"}
{attribute addProperty Size "6"}
TYPE Outputs_23C0ED1D : 
STRUCT
    {attribute addProperty Name "DevCtrl"}
    DevCtrl AT %Q* : UINT;
    {attribute addProperty Name "Frm0Ctrl"}
    Frm0Ctrl AT %Q* : UINT;
    {attribute addProperty Name "Frm0WcCtrl"}
    Frm0WcCtrl AT %Q* : UINT;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>